# Football-Management-API

./: Dockerfile  README.md  docker-compose.local.yml  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 0130c232da99_add_team_player_and_user_tables.py  a57b49111b7e_add_asking_price_to_table_player.py
app/: prestart.sh  pyproject.toml  run.sh
app/alembic/: env.py
app/alembic/versions/: a29568049f7b_add_user_team_and_player_tables.py
app/footballfantasyapi/: backend_pre_start.py  initial_data.py  main.py
app/footballfantasyapi/api/: deps.py
app/footballfantasyapi/api/api_v1/: api.py
app/footballfantasyapi/api/api_v1/endpoints/: auth.py  player.py  team.py  transfer_list.py
app/footballfantasyapi/clients/: base_team_generator.py  utils.py
app/footballfantasyapi/core/: auth.py  config.py
app/footballfantasyapi/crud/: __init__.py  base.py  crud_player.py  crud_team.py  crud_user.py
app/footballfantasyapi/db/: base.py  init_db.py  session.py
app/footballfantasyapi/models/: player.py  team.py  user.py
app/footballfantasyapi/schemas/: __init__.py  player.py  user.py
app/footballfantasyapi/tests/: conftest.py
app/footballfantasyapi/tests/test_routes/: test_players.py  test_teams.py  test_users.py
footballfantasyapi/: initial_data.py  main.py
footballfantasyapi/api/: deps.py
footballfantasyapi/clients/: base_team_generator.py  utils.py
footballfantasyapi/core/: config.py
footballfantasyapi/crud/: base.py  crud_player.py  crud_team.py  crud_user.py
footballfantasyapi/db/: init_db.py  session.py
(+9 files in other folders)
